# personal-finance-tracker

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/personal_finance_tracker/: config.py  data_manager.py  main.py  plaid_client.py
tests/: __init__.py  conftest.py  test_data_manager.py  test_integration.py  test_plaid_client.py
